# Calculator

./: Calculator.sln  README.md
Calculator/: CMakeLists.txt  Calculator.cpp  Calculator.hpp  Calculator.vcxproj  Calculator.vcxproj.filters  CoreCalculator.cpp  CoreCalculator.hpp  Main.cpp  PluginManager.cpp  PluginManager.hpp
Calculator/plugins/: cos.cpp  exp.cpp  ln.cpp  pow.cpp  sin.cpp  sqrt.cpp  tan.cpp
